--- a/about.html
+++ b/about.html
@@ -29,10 +29,10 @@
                 <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="plans.html">Plans</a>
+                <a class="nav-link" href="plans.html">Plans</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
+                <a class="nav-link active" href="about.html">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
@@ -70,88 +70,83 @@
       <div class="row">
           <div class="col-md-6">
               <div class="banner-area">
-              <h1 class="text-white">Investment Plans</h1>
-              <h5 class="bread text-white"><i class="fas fa-home"></i> Home - <span>Investment Plans</span></h5>
+              <h1 class="text-white">About Us</h1>
+              <h5 class="bread text-white"><i class="fas fa-home"></i> Home - <span>About Us</span></h5>
             </div>
           </div>
       </div>
     </div>
   </div>
 
-  <section class="plans">
-    <div class="container-fluid">
-      <br><br>
-      <h1 class="text-white text-center">Investment Plans</h1>
-      <p class="text-white text-center">Invest with us today and increase your financial gains.</p>
-      <br>
+  <section class="about-crypto">
+    <br><br><br>
+    <div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <h2 class="text-section-second">About Us</h2>
+            <br>
+            <p class="text-white">We are an international financial company engaged in investment activities, which are related to trading on financial markets and cryptocurrency exchanges performed by qualified professional traders.</p>
+            <p class="text-white">Our goal is to provide our investors with a reliable source of high income, while minimizing any possible risks and offering a high-quality service, allowing us to automate and simplify the relations between the investors and the trustees. We work towards increasing your profit margin by profitable investment. We look forward to you being part of our community.</p>
+        </div>
+    </div>
+</div>
+  </section>
+
+  <section class="how-works">
+    <br><br><br>
+    <h2 class="text-center text-white">How Cryptosite Works</h2>
+    <div class="col-md-8 mx-auto">
+    <p class="text-white text-center">Get involved in our tremendous platform and Invest. We will utilize your money and your profit will be credited into your wallet automatically.</p>
+    </div>
+   </div><!-- row end -->
+   <div class="row justify-content-center mb-none-30">
+               <div class="col-lg-4 col-md-6 work-item mb-30">
+       <div class="work-card text-center">
+         <div class="work-card__icon base--color">
+           <i class="fas fa-user-alt"></i>                <span class="step-number">1</span>
+         </div>
+         <div class="work-card__content">
+           <h4 class="base--color mb-3">Create Account</h4>
+         </div>
+       </div><!-- work-card end -->
+     </div>
+               <div class="col-lg-4 col-md-6 work-item mb-30">
+       <div class="work-card text-center">
+         <div class="work-card__icon base--color">
+           <i class="fas fa-cubes"></i>                <span class="step-number">2</span>
+         </div>
+         <div class="work-card__content">
+           <h4 class="base--color mb-3">Invest To Plan</h4>
+         </div>
+       </div><!-- work-card end -->
+     </div>
+               <div class="col-lg-4 col-md-6 work-item last mb-30">
+       <div class="work-card text-center">
+         <div class="work-card__icon base--color">
+           <i class="fas fa-wallet"></i>                <span class="step-number">3</span>
+         </div>
+         <div class="work-card__content">
+           <h4 class="base--color mb-3">Earn</h4>
+         </div>
+       </div><!-- work-card end -->
+     </div>
+             </div>
+ </section>
+
+ <section class="get-started">
+    <div class="container">
       <div class="row">
-        <div class="col-xl-3 col-lg-4 col-md-6">
-           <div class="plans-area text-center">
-             <span class="plan-head">SILVER</span>
-             <br><br>
-             <ul class="plan-list">
-               <li>ROI Model: 3% Daily</li>
-               <li>Duration: 30 Days</li>
-               <li>Return Principal: Yes</li>
-               <li>Total: 90% + <span class="capital">Capital</span></li>
-             </ul>
-             <br>
-             <span class="plan-footer">MIN: $500</span><br>
-             <span class="plan-invest">INVEST</span>
-           </div>
-        </div>
-
-        <div class="col-xl-3 col-lg-4 col-md-6 first">
-          <div class="plans-area text-center">
-            <span class="plan-head">GOLD</span>
-            <br><br>
-            <ul class="plan-list">
-              <li>ROI Model: 5% Daily</li>
-              <li>Duration: 30 Days</li>
-              <li>Return Principal: Yes</li>
-              <li>Total: 150% + <span class="capital">Capital</span></li>
-            </ul>
-            <br>
-            <span class="plan-footer">MIN: $2,500</span><br>
-            <span class="plan-invest">INVEST</span>
-          </div>
-        </div>
-
-        <div class="col-xl-3 col-lg-4 col-md-6 first">
-          <div class="plans-area text-center">
-            <span class="plan-head">PLATINUM</span>
-            <br><br>
-            <ul class="plan-list">
-              <li>ROI Model: 7% Daily</li>
-              <li>Duration: 30 Days</li>
-              <li>Return Principal: Yes</li>
-              <li>Total: 210% + <span class="capital">Capital</span></li>
-            </ul>
-            <br>
-            <span class="plan-footer">MIN: $7,000</span><br>
-            <span class="plan-invest">INVEST</span>
-          </div>
-        </div>
-
-        <div class="col-xl-3 col-lg-4 col-md-6 first">
-          <div class="plans-area text-center">
-            <span class="plan-head">DIAMOND</span>
-            <br><br>
-            <ul class="plan-list">
-              <li>ROI Model: 10% Daily</li>
-              <li>Duration: 30 Days</li>
-              <li>Return Principal: Yes</li>
-              <li>Total: 300% + <span class="capital">Capital</span></li>
-            </ul>
-            <br>
-            <span class="plan-footer">MIN: $15,000</span><br>
-            <span class="plan-invest">INVEST</span>
+        <div class="col-md-9 mx-auto">
+          <br><br>
+          <h2 class="text-white text-center">Get Started Today With Us</h2>
+          <p class="text-white text-center">Invest for Future in Stable Platform and Make Money Passively. We do not only we guarantee the best and the most exciting returns on your investments, but we also guarantee the security of your investment.</p>
+          <div align="center">
+            <a href="" class="btn btn-join">Join Us</a>
           </div>
         </div>
       </div>
     </div>
-    <br><br>
-</section>
+  </section>
 
 <footer class="crypto-footer">
     <div class="row text-white">
@@ -172,8 +167,8 @@
   <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-rocket"></i></button>
 
   <script src="bootstrap/js/bootstrap.min.js"></script>
-
   <script src="js/script.js"></script>
+
   </body>
 
   </html>
