--- a/contact.html
+++ b/contact.html
@@ -29,13 +29,13 @@
                 <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="plans.html">Plans</a>
+                <a class="nav-link" href="plans.html">Plans</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="about.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link active" href="contact.html">Contact</a>
               </li>
             </ul>
             <div class="float-btn">
@@ -70,90 +70,66 @@
       <div class="row">
           <div class="col-md-6">
               <div class="banner-area">
-              <h1 class="text-white">Investment Plans</h1>
-              <h5 class="bread text-white"><i class="fas fa-home"></i> Home - <span>Investment Plans</span></h5>
+              <h1 class="text-white">Contact Us</h1>
+              <h5 class="bread text-white"><i class="fas fa-home"></i> Home - <span>Contact Us</span></h5>
             </div>
           </div>
       </div>
     </div>
   </div>
 
-  <section class="plans">
-    <div class="container-fluid">
-      <br><br>
-      <h1 class="text-white text-center">Investment Plans</h1>
-      <p class="text-white text-center">Invest with us today and increase your financial gains.</p>
-      <br>
-      <div class="row">
-        <div class="col-xl-3 col-lg-4 col-md-6">
-           <div class="plans-area text-center">
-             <span class="plan-head">SILVER</span>
-             <br><br>
-             <ul class="plan-list">
-               <li>ROI Model: 3% Daily</li>
-               <li>Duration: 30 Days</li>
-               <li>Return Principal: Yes</li>
-               <li>Total: 90% + <span class="capital">Capital</span></li>
-             </ul>
-             <br>
-             <span class="plan-footer">MIN: $500</span><br>
-             <span class="plan-invest">INVEST</span>
-           </div>
-        </div>
+  <section class="certificate-area contact">
+      <br><br><br>
+    <div class="container pt-120" align="center">
+        <div class="row justify-content-center">
+          <div class="col-lg-10">
+            <div class="row mb-none-30">
+                            <div class="col-md-4 col-sm-6 mb-30">
+                <div class="contact-item">
+                  <i class="fas fa-envelope-open"></i>                  <h5 class="mt-2">Email Contact</h5>
+                  <div class="mt-4">
+                    <p><a href="mailto:support@Septacrypto.com"><span class="__cf_email__" data-cfemail="bdd9d8d0d2fdd8c5dcd0cdd1d893ded2d0">Click to send us an email support@Septacrypto.com</span></a></p>
+                  </div>
+                </div><!-- contact-item end -->
+              </div>
+                            <div class="col-md-4 col-sm-6 mb-30 first">
+                <div class="contact-item">
+                  <i class="fas fa-map-marker"></i>                  <h5 class="mt-2">Office Address</h5>
+                  <div class="mt-4">
+                    <p><a href="https://find-and-update.company-information.service.gov.uk/company/11996379" target="_blank"> 18th Fl, Suite 185, 200 SW Market St Portland,Oregon.</a></p>
+                  </div>
+                </div><!-- contact-item end -->
+              </div>
+               <div class="col-md-4 col-sm-6 mb-30 first">
+                <div class="contact-item">
+                  <i class="fas fa-envelope-open"></i>                  <h5 class="mt-2">Live Chat</h5>
+                  <div class="mt-4">
+                    <p><a href="javascript:void(0)"><span class="__cf_email__" data-cfemail="bdd9d8d0d2fdd8c5dcd0cdd1d893ded2d0">Click on the live chat button to engage our customer support 24/7</span></a></p>
+                  </div>
+                </div><!-- contact-item end -->
+              </div>
 
-        <div class="col-xl-3 col-lg-4 col-md-6 first">
-          <div class="plans-area text-center">
-            <span class="plan-head">GOLD</span>
-            <br><br>
-            <ul class="plan-list">
-              <li>ROI Model: 5% Daily</li>
-              <li>Duration: 30 Days</li>
-              <li>Return Principal: Yes</li>
-              <li>Total: 150% + <span class="capital">Capital</span></li>
-            </ul>
-            <br>
-            <span class="plan-footer">MIN: $2,500</span><br>
-            <span class="plan-invest">INVEST</span>
-          </div>
-        </div>
+                          </div>
 
-        <div class="col-xl-3 col-lg-4 col-md-6 first">
-          <div class="plans-area text-center">
-            <span class="plan-head">PLATINUM</span>
-            <br><br>
-            <ul class="plan-list">
-              <li>ROI Model: 7% Daily</li>
-              <li>Duration: 30 Days</li>
-              <li>Return Principal: Yes</li>
-              <li>Total: 210% + <span class="capital">Capital</span></li>
-            </ul>
-            <br>
-            <span class="plan-footer">MIN: $7,000</span><br>
-            <span class="plan-invest">INVEST</span>
-          </div>
-        </div>
+                          <br>
+                  <div class="row mb-none-30">
 
-        <div class="col-xl-3 col-lg-4 col-md-6 first">
-          <div class="plans-area text-center">
-            <span class="plan-head">DIAMOND</span>
-            <br><br>
-            <ul class="plan-list">
-              <li>ROI Model: 10% Daily</li>
-              <li>Duration: 30 Days</li>
-              <li>Return Principal: Yes</li>
-              <li>Total: 300% + <span class="capital">Capital</span></li>
-            </ul>
-            <br>
-            <span class="plan-footer">MIN: $15,000</span><br>
-            <span class="plan-invest">INVEST</span>
+              <div class="col-md-4 col-sm-6 mb-30 mx-auto">
+                <div class="contact-item">
+                  <i class="fas fa-phone"></i>                  <h5 class="mt-2">Call or Message</h5>
+                  <div class="mt-4">
+                    <p><a href="tel:+15412247439"><span class="__cf_email__" data-cfemail="bdd9d8d0d2fdd8c5dcd0cdd1d893ded2d0">+154-122-47439</span></a></p>
+                  </div>
+                </div><!-- contact-item end -->
+              </div>
+                  </div>
           </div>
         </div>
       </div>
-    </div>
-    <br><br>
-</section>
+  </section>
 
-<footer class="crypto-footer">
+
+  <footer class="crypto-footer">
     <div class="row text-white">
       <div class="col-md-6">
        <p class="footer-text">© 2021 Cryptosite. All rights reserved</p>
@@ -172,8 +148,8 @@
   <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-rocket"></i></button>
 
   <script src="bootstrap/js/bootstrap.min.js"></script>
-
   <script src="js/script.js"></script>
+
   </body>
 
   </html>
