--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="js/font-awesome.js"></script>
     <link rel="stylesheet" href="slick-1.8.1/slick-1.8.1/slick/slick.css">
     <link rel="stylesheet" href="slick-1.8.1/slick-1.8.1/slick/slick-theme.css">
+    <link rel="stylesheet" href="aos/aos.css">
     <!-- <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=60d13c8905c128001ae49d27&product=sticky-share-buttons' async='async'></script> -->
 </head>
 <body>
@@ -19,7 +20,7 @@
     <div style="height:40px; background-color: #FFFFFF; overflow:hidden; box-sizing: border-box; border-radius: 0px; text-align: right; line-height:14px; block-size:40px; font-size: 12px; font-feature-settings: normal; text-size-adjust: 100%; padding:1px;padding: 0px; margin: 0px; width: 100%;"><div style="height:40px; padding:0px; margin:0px; width: 100%;"><iframe src="https://widget.coinlib.io/widget?type=horizontal_v2&theme=light&pref_coin_id=1505&invert_hover=" width="100%" height="36px" scrolling="auto" marginwidth="0" marginheight="0" frameborder="0" border="0" style="border:0;margin:0;padding:0;"></iframe></div></div>
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Cryptosite</a>
+          <a class="navbar-brand" href="index.html">Cryptosite</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <i class="fas fa-bars text-white"></i>
           </button>
@@ -32,15 +33,15 @@
                 <a class="nav-link" href="plans.html">Plans</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="about.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="contact.html">Contact</a>
               </li>
             </ul>
             <div class="float-btn">
-              <a href="#" class="btn btn-login">Login</a>
-              <a href="#" class="btn btn-register">Sign Up</a>
+              <a href="#un" class="btn btn-login">Login</a>
+              <a href="register.html" class="btn btn-register">Sign Up</a>
             </div>
             <div class="d-flex">
                 <span id="google_translate_element"></span>
@@ -73,7 +74,7 @@
               <h1 class="text-white">Invest Wisely With Cryptosite</h1>
               <h5 class="text-banner">Looking for a reliable plug for your cryptocurreny Investment?</h5>
               <h6 class="text-white">Cryptosite got you covered. We make it possible for everyone who may not be professionals to engage and benefit from cryptocurrencies, financial markets using our experts-managed trading and investments portfolios. We ensure transparent returns, with favourable management fee.</h6>
-              <a href="#" class="btn btn-startmine" style="position:relative;">Register</a>
+              <a href="#un" class="btn btn-startmine" style="position:relative;">Register</a>
             </div>
           </div>
       </div>
@@ -90,7 +91,7 @@
     <br>
     <div class="row">
         <div class="col-xl-4 col-md-6">
-           <div class="why-area p-4">
+           <div class="why-area p-4" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-duration="1500">
             <div class="why-heads">
           <span><i class="far fa-copy"></i></span> 
           Legal Company
@@ -98,7 +99,7 @@
         <p class="text-white">Our company conducts absolutely legal activities in the legal field. We are certified to operate investment business, we are legal and safe.</p>
         </div>
     </div> 
-        <div class="col-xl-4 col-md-6 first">
+        <div class="col-xl-4 col-md-6 first" data-aos="zoom-in" data-aos-duration="1600">
             <div class="why-area p-4">
                 <div class="why-heads">
               <span><i class="fas fa-lock"></i></span> 
@@ -107,7 +108,7 @@
             <p class="text-white">We are trusted by a huge number of people. We are working hard constantly to improve the level of our security system and minimize possible risks.</p>
             </div>
         </div>
-        <div class="col-xl-4 col-md-6 first">
+        <div class="col-xl-4 col-md-6 first" data-aos="fade-left" data-aos-duration="1700">
             <div class="why-area p-4">
                 <div class="why-heads">
               <span><i class="fas fa-user-lock"></i></span> 
@@ -116,7 +117,7 @@
             <p class="text-white">Anonymity and using cryptocurrency as a payment instrument. In the era of electronic money – this is one of the most convenient ways of cooperation.</p>
             </div>
         </div>
-        <div class="col-xl-4 col-md-6">
+        <div class="col-xl-4 col-md-6" data-aos="zoom-in-up" data-aos-duration="1800">
             <br>
             <div class="why-area p-4">
                 <div class="why-heads">
@@ -126,7 +127,7 @@
             <p class="text-white">Our all retreats are treated spontaneously once requested. There are high maximum limits. The minimum withdrawal amount is only $10 .</p>
             </div>
         </div>
-        <div class="col-xl-4 col-md-6">
+        <div class="col-xl-4 col-md-6" data-aos="flip-right" data-aos-duration="1900">
             <br>
             <div class="why-area p-4">
                 <div class="why-heads">
@@ -136,7 +137,7 @@
             <p class="text-white">We are offering a certain level of referral income through our referral program. you can increase your income by simply refer a few people.</p>
             </div>
         </div>
-        <div class="col-xl-4 col-md-6">
+        <div class="col-xl-4 col-md-6" data-aos="flip-down" data-aos-duration="2000">
           <br>
           <div class="why-area p-4">
             <div class="why-heads">
@@ -146,7 +147,7 @@
         <p class="text-white">We provide 24/7 customer support through e-mail and telegram. Our support representatives are periodically available to elucidate any difficulty.</p>
         </div>          
         </div>
-        <div class="col-xl-4 col-md-6">
+        <div class="col-xl-4 col-md-6" data-aos="fade-in-down" data-aos-duration="2100">
          <br>
          <div class="why-area p-4">
             <div class="why-heads">
@@ -156,7 +157,7 @@
         <p class="text-white">We are using a dedicated server for the website which allows us exclusive use of the resources of the entire server.</p>
         </div> 
         </div>
-        <div class="col-xl-4 col-md-6">
+        <div class="col-xl-4 col-md-6" data-aos="zoom-up-right" data-aos-duration="2200">
             <br>
             <div class="why-area p-4">
                <div class="why-heads">
@@ -166,7 +167,7 @@
            <p class="text-white">Comodo Essential-SSL Security encryption confirms that the presented content is genuine and legitimate.</p>
            </div> 
         </div>
-        <div class="col-xl-4 col-md-6">
+        <div class="col-xl-4 col-md-6" data-aos="fade-up" data-aos-duration="2300">
             <br>
             <div class="why-area p-4">
                <div class="why-heads">
@@ -265,7 +266,7 @@
                         <div class="profit-calculator-wrapper text-white" align="center"><strong>Registered Office Address:<br>
                         
                          18th Fl, Suite 185,<br> 200 SW Market St Portland,Oregon.</strong>
-<a href="#" target="_blank" style="text-decoration: none;"><font color="white">#11996379</font></a><br></div>
+<a href="#un" target="_blank" style="text-decoration: none;"><font color="white">#11996379</font></a><br></div>
       </div>
     </div>
   </div>
@@ -567,6 +568,10 @@ var auto_refresh = setInterval(
     background-color: #0c3c4c;
   }
 
+  .table-crypto thead tr {
+    color: white !important;
+  }
+
   .table-crypto tbody tr {
     color: white !important;
   }
@@ -605,16 +610,25 @@ var auto_refresh = setInterval(
     </div>
     <div class="col-md-6">
       <div class="offset-md-7">
-                    <a href="#" class="footer-media"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" class="footer-media"><i class="fab fa-twitter"></i></a>
-                    <a href="#" class="footer-media"><i class="fab fa-pinterest-p"></i></a>
-                    <a href="#" class="footer-media"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#un" class="footer-media"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#un" class="footer-media"><i class="fab fa-twitter"></i></a>
+                    <a href="#un" class="footer-media"><i class="fab fa-pinterest-p"></i></a>
+                    <a href="#un" class="footer-media"><i class="fab fa-linkedin-in"></i></a>
                   </div>
     </div>
   </div>
 </footer>
 
+<button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-rocket"></i></button>
+
     <script src="bootstrap/js/bootstrap.min.js"></script>
+
+    <script src="js/script.js"></script>
+
+    <script src="aos/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
 
     <script src="js/jquery-1.11.0.min.js"></script>
     <script src="js/jquery-migrate-1.2.1.min.js"></script>
