--- a/register.html
+++ b/register.html
@@ -29,7 +29,7 @@
                 <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="plans.html">Plans</a>
+                <a class="nav-link" href="plans.html">Plans</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="about.html">About</a>
@@ -65,95 +65,22 @@
     </div><!-- / STAR ANIMATION -->
   </div>
 
-  <div class="other-banners">
-    <div class="container">
-      <div class="row">
-          <div class="col-md-6">
-              <div class="banner-area">
-              <h1 class="text-white">Investment Plans</h1>
-              <h5 class="bread text-white"><i class="fas fa-home"></i> Home - <span>Investment Plans</span></h5>
-            </div>
+  <section class="testimonial-area">
+      <br><br><br><br><br>
+      <div class="container">
+          <div class="row">
+              <div class="col-md-6 mx-auto">
+                  <div class="panel-area">
+                      <div class="panel-welcome">
+                          <h1><span>Welcome To</span> <span>Cryptosite</span></h1>
+                      </div>
+                  </div>
+              </div>
           </div>
       </div>
-    </div>
-  </div>
+  </section>
 
-  <section class="plans">
-    <div class="container-fluid">
-      <br><br>
-      <h1 class="text-white text-center">Investment Plans</h1>
-      <p class="text-white text-center">Invest with us today and increase your financial gains.</p>
-      <br>
-      <div class="row">
-        <div class="col-xl-3 col-lg-4 col-md-6">
-           <div class="plans-area text-center">
-             <span class="plan-head">SILVER</span>
-             <br><br>
-             <ul class="plan-list">
-               <li>ROI Model: 3% Daily</li>
-               <li>Duration: 30 Days</li>
-               <li>Return Principal: Yes</li>
-               <li>Total: 90% + <span class="capital">Capital</span></li>
-             </ul>
-             <br>
-             <span class="plan-footer">MIN: $500</span><br>
-             <span class="plan-invest">INVEST</span>
-           </div>
-        </div>
-
-        <div class="col-xl-3 col-lg-4 col-md-6 first">
-          <div class="plans-area text-center">
-            <span class="plan-head">GOLD</span>
-            <br><br>
-            <ul class="plan-list">
-              <li>ROI Model: 5% Daily</li>
-              <li>Duration: 30 Days</li>
-              <li>Return Principal: Yes</li>
-              <li>Total: 150% + <span class="capital">Capital</span></li>
-            </ul>
-            <br>
-            <span class="plan-footer">MIN: $2,500</span><br>
-            <span class="plan-invest">INVEST</span>
-          </div>
-        </div>
-
-        <div class="col-xl-3 col-lg-4 col-md-6 first">
-          <div class="plans-area text-center">
-            <span class="plan-head">PLATINUM</span>
-            <br><br>
-            <ul class="plan-list">
-              <li>ROI Model: 7% Daily</li>
-              <li>Duration: 30 Days</li>
-              <li>Return Principal: Yes</li>
-              <li>Total: 210% + <span class="capital">Capital</span></li>
-            </ul>
-            <br>
-            <span class="plan-footer">MIN: $7,000</span><br>
-            <span class="plan-invest">INVEST</span>
-          </div>
-        </div>
-
-        <div class="col-xl-3 col-lg-4 col-md-6 first">
-          <div class="plans-area text-center">
-            <span class="plan-head">DIAMOND</span>
-            <br><br>
-            <ul class="plan-list">
-              <li>ROI Model: 10% Daily</li>
-              <li>Duration: 30 Days</li>
-              <li>Return Principal: Yes</li>
-              <li>Total: 300% + <span class="capital">Capital</span></li>
-            </ul>
-            <br>
-            <span class="plan-footer">MIN: $15,000</span><br>
-            <span class="plan-invest">INVEST</span>
-          </div>
-        </div>
-      </div>
-    </div>
-    <br><br>
-</section>
-
-<footer class="crypto-footer">
+  <footer class="crypto-footer">
     <div class="row text-white">
       <div class="col-md-6">
        <p class="footer-text">© 2021 Cryptosite. All rights reserved</p>
@@ -168,12 +95,11 @@
       </div>
     </div>
   </footer>
-
+  
   <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-rocket"></i></button>
-
-  <script src="bootstrap/js/bootstrap.min.js"></script>
-
-  <script src="js/script.js"></script>
+  
+      <script src="bootstrap/js/bootstrap.min.js"></script>
+  
+      <script src="js/script.js"></script>
   </body>
-
   </html>
