--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
                 <div class="contact-item">
                   <i class="fas fa-envelope-open"></i>                  <h5 class="mt-2">Email Contact</h5>
                   <div class="mt-4">
-                    <p><a href="mailto:support@Septacrypto.com"><span class="__cf_email__" data-cfemail="bdd9d8d0d2fdd8c5dcd0cdd1d893ded2d0">Click to send us an email support@Septacrypto.com</span></a></p>
+                    <p><a href="mailto:support@Cryptosite.com"><span class="__cf_email__" data-cfemail="bdd9d8d0d2fdd8c5dcd0cdd1d893ded2d0">Click to send us an email support@Cryptosite.com</span></a></p>
                   </div>
                 </div><!-- contact-item end -->
               </div>
