--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
      <p class="text-white">User From the United Kingdoms</p>
     </div>
     <div class="testimonial">
-      <p class="text-white">A Friend persuaded me to join Septacrypto and I was not interested because I thought it wasn't legit. But now seeing the kind of Income I get from this business, I have made all my household a beneficiary of Cryptosite.</p>
+      <p class="text-white">A Friend persuaded me to join Cryptosite and I was not interested because I thought it wasn't legit. But now seeing the kind of Income I get from this business, I have made all my household a beneficiary of Cryptosite.</p>
       <div class="testi-img">
         <hr style="background-color: rgb(223, 162, 9) !important; height: 2px;">
         <img src="img/bernado.jpg" alt="testifier-1" class="img-testimonial">
@@ -440,7 +440,7 @@
       <p class="text-white">User From Portugal.</p>
     </div>
     <div class="testimonial">
-      <p class="text-white">I got very frustrated when my business wasn't moving and I was seriously in debt. I joined Septacrypto and they empowered me financially to grow my business better than how it was before and also to clear all my debts.</p>
+      <p class="text-white">I got very frustrated when my business wasn't moving and I was seriously in debt. I joined Cryptosite and they empowered me financially to grow my business better than how it was before and also to clear all my debts.</p>
       <div class="testi-img">
         <hr style="background-color: rgb(223, 162, 9) !important; height: 2px;">
         <img src="img/ivanovic.jpg" alt="testifier-1" class="img-testimonial">
