changed all names to cointxb

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div style="height:40px; background-color: #FFFFFF; overflow:hidden; box-sizing: border-box; border-radius: 0px; text-align: right; line-height:14px; block-size:40px; font-size: 12px; font-feature-settings: normal; text-size-adjust: 100%; padding:1px;padding: 0px; margin: 0px; width: 100%;"><div style="height:40px; padding:0px; margin:0px; width: 100%;"><iframe src="https://widget.coinlib.io/widget?type=horizontal_v2&theme=light&pref_coin_id=1505&invert_hover=" width="100%" height="36px" scrolling="auto" marginwidth="0" marginheight="0" frameborder="0" border="0" style="border:0;margin:0;padding:0;"></iframe></div></div>
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">Cryptosite</a>
+          <a class="navbar-brand" href="index.html">CoinTXB</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <i class="fas fa-bars text-white"></i>
           </button>
@@ -71,9 +71,9 @@
       <div class="row">
           <div class="col-md-6">
               <div class="banner-area">
-              <h1 class="text-white">Invest Wisely With Cryptosite</h1>
+              <h1 class="text-white">Invest Wisely With CoinTXB</h1>
               <h5 class="text-banner">Looking for a reliable plug for your cryptocurreny Investment?</h5>
-              <h6 class="text-white">Cryptosite got you covered. We make it possible for everyone who may not be professionals to engage and benefit from cryptocurrencies, financial markets using our experts-managed trading and investments portfolios. We ensure transparent returns, with favourable management fee.</h6>
+              <h6 class="text-white">CoinTXB got you covered. We make it possible for everyone who may not be professionals to engage and benefit from cryptocurrencies, financial markets using our experts-managed trading and investments portfolios. We ensure transparent returns, with favourable management fee.</h6>
               <a href="#un" class="btn btn-startmine" style="position:relative;">Register</a>
             </div>
           </div>
@@ -84,7 +84,7 @@
   <br><br>
   <div class="container-fluid">
     <section class="why-choose">
-        <h2 class="text-center section-text"><b>Why Choose Cryptosite</b></h2>
+        <h2 class="text-center section-text"><b>Why Choose CoinTXB</b></h2>
         <div class="col-md-8 mx-auto">
         <p class="text-center">Our goal is to provide our investors with a reliable source of high income, whilst minimizing any possible risks and offering a high-quality service.</p>
     </div>
@@ -275,7 +275,7 @@
 
 <section class="how-works">
    <br><br><br>
-   <h2 class="text-center text-white">How Cryptosite Works</h2>
+   <h2 class="text-center text-white">How CoinTXB Works</h2>
    <div class="col-md-8 mx-auto">
    <p class="text-white text-center">Get involved in our tremendous platform and Invest. We will utilize your money and your profit will be credited into your wallet automatically.</p>
    </div>
@@ -422,7 +422,7 @@
 
   <div class="responsive">
     <div class="testimonial">
-     <p class="text-white">I have never worked and gotten this paid before. Cryptosite has paid me seven times more than my previous job. They are the best investment platform for crypto currency.</p>
+     <p class="text-white">I have never worked and gotten this paid before. CoinTXB has paid me seven times more than my previous job. They are the best investment platform for crypto currency.</p>
      <div class="testi-img">
        <hr style="background-color: rgb(223, 162, 9) !important; height: 2px;">
        <img src="img/roseline.jpg" alt="testifier-1" class="img-testimonial">
@@ -431,7 +431,7 @@
      <p class="text-white">User From the United Kingdoms</p>
     </div>
     <div class="testimonial">
-      <p class="text-white">A Friend persuaded me to join Cryptosite and I was not interested because I thought it wasn't legit. But now seeing the kind of Income I get from this business, I have made all my household a beneficiary of Cryptosite.</p>
+      <p class="text-white">A Friend persuaded me to join CoinTXB and I was not interested because I thought it wasn't legit. But now seeing the kind of Income I get from this business, I have made all my household a beneficiary of CoinTXB.</p>
       <div class="testi-img">
         <hr style="background-color: rgb(223, 162, 9) !important; height: 2px;">
         <img src="img/bernado.jpg" alt="testifier-1" class="img-testimonial">
@@ -440,7 +440,7 @@
       <p class="text-white">User From Portugal.</p>
     </div>
     <div class="testimonial">
-      <p class="text-white">I got very frustrated when my business wasn't moving and I was seriously in debt. I joined Cryptosite and they empowered me financially to grow my business better than how it was before and also to clear all my debts.</p>
+      <p class="text-white">I got very frustrated when my business wasn't moving and I was seriously in debt. I joined CoinTXB and they empowered me financially to grow my business better than how it was before and also to clear all my debts.</p>
       <div class="testi-img">
         <hr style="background-color: rgb(223, 162, 9) !important; height: 2px;">
         <img src="img/ivanovic.jpg" alt="testifier-1" class="img-testimonial">
@@ -606,7 +606,7 @@ var auto_refresh = setInterval(
 <footer class="crypto-footer">
   <div class="row text-white">
     <div class="col-md-6">
-     <p class="footer-text">© 2021 Cryptosite. All rights reserved</p>
+     <p class="footer-text">© 2021 CoinTXB. All rights reserved</p>
     </div>
     <div class="col-md-6">
       <div class="offset-md-7">
