--- a/register.html
+++ b/register.html
@@ -19,7 +19,7 @@
     <div style="height:40px; background-color: #FFFFFF; overflow:hidden; box-sizing: border-box; border-radius: 0px; text-align: right; line-height:14px; block-size:40px; font-size: 12px; font-feature-settings: normal; text-size-adjust: 100%; padding:1px;padding: 0px; margin: 0px; width: 100%;"><div style="height:40px; padding:0px; margin:0px; width: 100%;"><iframe src="https://widget.coinlib.io/widget?type=horizontal_v2&theme=light&pref_coin_id=1505&invert_hover=" width="100%" height="36px" scrolling="auto" marginwidth="0" marginheight="0" frameborder="0" border="0" style="border:0;margin:0;padding:0;"></iframe></div></div>
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">Cryptosite</a>
+          <a class="navbar-brand" href="index.html">CoinTXB</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <i class="fas fa-bars text-white"></i>
           </button>
@@ -72,7 +72,7 @@
               <div class="col-md-6 mx-auto">
                   <div class="panel-area">
                       <div class="panel-welcome">
-                          <h1><span>Welcome To</span> <span>Cryptosite</span></h1>
+                          <h1><span>Welcome To</span> <span>CoinTXB</span></h1>
                       </div>
                   </div>
               </div>
@@ -83,7 +83,7 @@
   <footer class="crypto-footer">
     <div class="row text-white">
       <div class="col-md-6">
-       <p class="footer-text">© 2021 Cryptosite. All rights reserved</p>
+       <p class="footer-text">© 2021 CoinTXB. All rights reserved</p>
       </div>
       <div class="col-md-6">
         <div class="offset-md-7">
